# StreamEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GLWindow.cpp  GLWindow.h  Image.cpp  Image.h  README.md  main.cpp
HighLevel/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
Libs/glfw/: CMakeLists.txt
LowLevel/Images/: Animation.cpp  Animation.h  Drawable.cpp  Drawable.h  Image.cpp  Image.h
LowLevel/Render/: GLWindow.cpp  GLWindow.h  Render.cpp  Render.h  Shader.cpp  Shader.h
LowLevel/Render/Shaders/: FragmentShader.glsl  Shader.cpp  Shader.h  VertexShader.glsl
LowLevel/Render/Window/: GLWindow.cpp  GLWindow.h  KeyMapper.cpp  KeyMapper.h
Resource/Shaders/: FragmentShader.glsl
Resource/XML/: ImageLib.xml
Resource/XML/Animations/: Anim1.xml
Resource/XML/Scenes/: TestScene.xml
XMLParser/: AnimLoaderXML.cpp  AnimLoaderXML.h  LibraryXML.cpp  LibraryXML.h  SceneLoaderXML.cpp  SceneLoaderXML.h
